--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://moisesdreckmann.github.io/portfolio/",
+  "homepage": "https://moisesdreckmann.github.io/portfolioo/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
